2000-12-18  Jes Sorensen  <jes@linuxcare.com>

	* linuxthreads/sysdeps/ia64/pt-machine.h: __compare_and_swap
	and compare_and_swap_with_release_semantics returns int not long.

2000-12-17  Andreas Jaeger  <aj@suse.de>

	* sysdeps/s390/pt-machine.h (testandset): Use long int as return
	value.
	* sysdeps/arm/pt-machine.h (testandset): Likewise.
	* sysdeps/hppa/pt-machine.h (testandset): Likewise.
	* sysdeps/m68k/pt-machine.h (testandset): Likewise.
	* sysdeps/sh/pt-machine.h (testandset): Likewise.
	* sysdeps/sparc/sparc32/pt-machine.h (testandset): Likewise.
	* sysdeps/sparc/sparc64/pt-machine.h (testandset): Likewise.

2000-12-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/pt-machine.h (testandset): Adjust for prototype change.
	* sysdeps/i386/i686/pt-machine.h (testandset): Likewise.

2000-12-17  Andreas Jaeger  <aj@suse.de>

	* internals.h: Add prototypes for testandset and
	__compare_and_swap to shut up gcc warnings.

2000-12-06  Wolfram Gloger  <wg@malloc.de>

	* join.c (pthread_detach): Allow case where the thread has already
	terminated.

2000-12-05  Andreas Jaeger  <aj@suse.de>

	* sysdeps/mips/pspinlock.c (__pthread_spin_lock): Don't set mips2.
	* sysdeps/mips/pt-machine.h (testandset): Likewise.
	(__compare_and_swap): Likewise.
	Patches by Maciej W. Rozycki <macro@ds2.pg.gda.pl>.

2000-11-20  Jakub Jelinek  <jakub@redhat.com>

	* Examples/ex3.c (main): Cast int to long before casting to void *.
	(search): Cast void * to long, not int.
	* Examples/ex8.c (main, thread): Similarly.
	* Examples/ex11.c (main): Similarly.
	* Examples/ex14.c (worker, do_test): Similarly.
	* ecmutex.c (worker, do_test): Similarly.
	(nlocks): Cast to int.

2000-11-08  Bruce Mitchener  <bruce@cubik.org>

	* linuxthreads.texi:  Add documentation for pthreads attributes
	guardsize, stackaddr, stacksize, and stack.  Fix typo in previous
	patch.  Document pthread_[sg]etconcurrency().  Mark
	pthread_mutexattr_[sg]ettype() as POSIX rather than GNU.
