@@ -1,3 +1,9 @@
+2000-12-26  Ulrich Drepper  <drepper@redhat.com>
+
+	* Examples/ex6.c (test_thread): Make static.
+	* Examples/ex12.c (test_thread): Make static and add noreturn
+	attribute.
+
 2000-12-18  Jes Sorensen  <jes@linuxcare.com>
 
 	* linuxthreads/sysdeps/ia64/pt-machine.h: __compare_and_swap
